[gd_scene load_steps=4 format=3 uid="uid://be58cqdmimq7m"]

[ext_resource type="Script" uid="uid://chje2n8tu3bay" path="res://scenes/levels/level.gd" id="1_b2cq8"]
[ext_resource type="PackedScene" uid="uid://clrm1ntjnqpiu" path="res://scenes/player/player.tscn" id="3_b2cq8"]
[ext_resource type="PackedScene" uid="uid://xv88ewwkqm3l" path="res://scenes/objects/gate.tscn" id="3_xb4v1"]

[node name="Level" type="Node2D"]
script = ExtResource("1_b2cq8")

[node name="Gate" parent="." instance=ExtResource("3_xb4v1")]
position = Vector2(555, -587)

[node name="Player" parent="." instance=ExtResource("3_b2cq8")]
position = Vector2(686, 560)

[connection signal="player_entered_gate" from="Gate" to="." method="_on_gate_player_entered_gate"]
[connection signal="player_exited_gate" from="Gate" to="." method="_on_gate_player_exited_gate"]
[connection signal="grenade" from="Player" to="." method="_on_player_grenade"]
[connection signal="laser" from="Player" to="." method="_on_player_laser"]
